--- a/Website/style.css
+++ b/Website/style.css
@@ -46,6 +46,8 @@ header .logo
     text-decoration: none;
     font-size: 2em;
     letter-spacing: 2px;
+    text-shadow: 1px 1px 2px #1B1322;
+
    
 }
 
@@ -54,11 +56,13 @@ header ul
     display: flex;
     justify-content: center;
     align-items: center;
+    text-shadow: 1px 1px 2px #1B1322;
 }
 
 header ul li {
     list-style: none;
     margin-left: 60px;
+    
 }
 
 header ul li a{
@@ -66,20 +70,100 @@ header ul li a{
     color: #DDE6EC; 
 }
 
+
+header ul li a:hover{
+    text-decoration: none;
+    color: #A4BDD3; 
+}
+
+
+
+
+
 .skills {
+ 
  background-color: #cfcdd1;
+ align-items: center;
+ justify-content: center;
+ height: 1200px;
+ width:100%;
+ overflow: hidden;
+ display: flex;
+ flex-direction: row;
+
+
+
+
+
+
+}
+
+.skills > div {
+    
+    text-align: center;
+    font-size: 30px;
+    color: #1b1322;
+    padding: 50px;
+}
+
+.aboutme {
+    text-align: center;
+    font-size: 25px;
+    color: #1b1322;
+    padding: 200px;
+
+}
+
+.selfportrait {
+    
+    width: 500px;
+    height: 500px;
+}
+
+.abtmetext{
+    
+}
+
+.skilllist{
+    text-align: center;
+    font-size: 25px;
+    color: #1b1322;
+    padding: 200px;
+    
+}
+
+.skilllist h2{
+ color: #1b1322;
+ justify-content: space-around;
+ padding: 20px;
+}
+
+.skilllist li{
+   display: flex;
+   justify-content: center;
+   align-items: center;
+}
+
+.projects {
+ background-color: #724E91;
  text-align: center;
  font-size: 30px;
  color: #1b1322;
  padding: 100px;
  display: flex;
+ flex: 50%;
  align-items: center;
  justify-content: center;
- height: 1000px;
+ height: 2000px;
  width:100%;
  overflow: hidden;
 
 }
+
+
+
+
+
 
 h1 {
     font-weight: 500;
@@ -92,7 +176,7 @@ h1 {
   
 }
 
-h2 {
+h2 .home {
     font-weight: 300;
     text-decoration: none;
     font-size: 1.5em;
@@ -105,26 +189,35 @@ h2 {
 
 .home{
     background: linear-gradient( #111112,#4C285B);
-    height: 1500px;
+    height: 1350px;
 }
 
 .home_top {
      display: flex;
      flex-direction: row;
-     align-items:center;
      justify-content: center;
      align-items:  center;
-     padding-top: 3%;
-     padding-bottom: 12.5%;
+     
+     padding-bottom: 15.5%;
      height: auto;
      
 
 
 }
 
+.aboutme {
+    display: grid;
+    gap: 50px;
+}
+
+.abtmetext {
+    
+}
+
+
+
 .wrapper {
-    
-    
+  display: flex;
      
 }
 
@@ -378,8 +471,9 @@ body::-webkit-scrollbar-thumb {
 
 #stars:after {
     content: '';
-    position: relative;
-    top: 2000px;
+    position: absolute;
+    top: -100px;
+    bottom: 500px;
     width: 1px;
     height: 1px;
     background: transparent;
@@ -622,8 +716,9 @@ body::-webkit-scrollbar-thumb {
 
 #stars2:after {
     content: '';
-    position: relative;
-    top: 2000px;
+    position: absolute;
+    top: 0px;
+    bottom: 500px;
     width: 2px;
     height: 2px;
     background: transparent;
@@ -682,7 +777,7 @@ body::-webkit-scrollbar-thumb {
 
 @keyframes animStar {
     from {
-        transform: translateY(0px);
+        transform: translateY(-1000px);
     }
     to {
         transform: translateY(-2000px);
