--- a/css/style.css
+++ b/css/style.css
@@ -22,33 +22,40 @@ body {
 }
 
 .container {
-    width: 100vw;
-    height: 100vh;
+  width: 100%;
+  height: 100%;
+  max-width: 1200px;
+  transform: translate(0%, 25%);
+  margin: auto;
+  /* position: relative; */
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
 }
 
 header {
     position: fixed;
     top: 0;
-    left: 0;
+    left: 50%;
+    transform: translate(-50%, 0%);
     width: 100%;
-    padding:30px 100px;
+    padding:30px 16px;
     display: flex;
-    font-size: 1.5vw;
+    font-size: 28px;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
     z-index: 10;
-
+    max-width: 1200px;
 }
 
 header .logo {
-    width: 15%;
+    width: 190px;
 }
 
 header ul {
     
     display: flex;
     justify-content: right;
-    padding-right: 10%;
     align-items: center;
     letter-spacing: 2px;
     text-shadow: 1px 1px 2px #1B1322;
@@ -124,12 +131,77 @@ header ul li a:hover{
 }
 
 .aboutme {
+   display: grid;
     text-align: center;
     font-size: 25px;
     color: #1b1322;
-    padding: 200px;
+    justify-content: center;
+    align-items: start;
+    justify-items: center;
+    height: 0%;
+}
+
+#skills > .container {
+  transform: translate(0%, 12.5%);
+}
+
+#skills{
+  height: 150vh;
+}
+
+.skills h2{
+  display: block;
+  font-size: 1em;
+  margin-block-start: 1em;
+  margin-block-end: -1em;
+  padding: 10px;
+  font-weight: bold;
+  text-align: center;
+  justify-content: center;
+}
+
+.skills {
+  height: 50%;
+  width: 100%;
+  
+}
+
+.skillcontainer{
+  width: 100%;
+  background-color: whitesmoke;
+  border-radius: 20px;
+}
+
+
+
+.ae{
+  width: 90%; background-color: #4C285B;
+  border-radius: 20px;
+  transition: width 2s ease;
 
 }
+
+.blender{
+  width: 80%; background-color:#724E91;
+  border-radius: 20px;
+}
+
+.ps{
+  width:65%; background-color: #A4BDD3;
+  border-radius: 20px;
+}
+
+.web{
+  width: 50%; background-color:#DDE6EC;
+  border-radius: 20px;
+}
+
+
+
+
+
+
+
 
 .selfportrait {
     width: 500px;
@@ -137,7 +209,7 @@ header ul li a:hover{
 }
 
 .abtmetext{
-    
+  
 }
 
 .skilllist{
@@ -192,7 +264,7 @@ li .filtermenu {
 		 
 }
 
-li .filtermenu &.active {
+li .filtermenu .active {
     background:#CCC;
 }
 
@@ -246,7 +318,7 @@ li .filtermenu &.active {
 h1 {
     font-weight: 500;
     text-decoration: none;
-    font-size: 4vw;
+    font-size: 48px;
     letter-spacing: 2px;
     color: #DDE6EC; 
     font-family: 'Josefin Sans', serif;
@@ -271,25 +343,25 @@ h2 .home {
     width: 100vw;
 }
 
-.home_top {
-     display: flex;
-     flex-direction: row;
+.home_top_text {
+     /* display: flex;
+     flex-direction: column;
      justify-content: center;
-     align-items:  center;
-     height: 100vh;
-     width: 100vw;
+     align-items:  center; */
+     width: 75%;
+     padding: 0 16px;
+     transform: translate(0%, 15%);
 }
-
-.aboutme {
-    display: grid;
-    gap: 50px;
+.home_top_pic {
+  /* display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items:  center; */
+  /* height: 100vh; */
+  width: 25%;
+  transform: translate(0%, 15%);
+  
 }
-
-.abtmetext {
-    
-}
-
-
 
 .wrapper {
   display: flex;
@@ -299,7 +371,7 @@ h2 .home {
 
 .moongif {
     height: auto;
-    width: 25%;
+    width:100%;
     opacity: 85%;
 
     
@@ -860,19 +932,43 @@ body::-webkit-scrollbar-thumb {
 
 
 
-@media screen and (max-width: 720px){
+@media screen and (max-width: 840px){
+  body::-webkit-scrollbar {
+    display: none; 
+  }
+   
+  body::-webkit-scrollbar-track {
+    display: none; 
+  }
+   
+  body::-webkit-scrollbar-thumb {
+    display: none; 
+    
+  }
+  .container {
+    width: 100vw;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+    /* position: relative; */
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+  }
 
 header {
     position: fixed;
     top: 0;
     left: 0;
-    width: 100%;
-    padding:30px 100px;
+    width: 100vw;
+    padding: 30px 16px;
     display: flex;
     font-size: 2vw;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
     z-index: 10;
+    transform: translate(0%, 0%);
 }
 
 header ul {
@@ -894,6 +990,9 @@ header li a {
     margin: 16px 0;
   }
 
+nav ul {
+  display: none;
+}
  .hamburger{
    display: block;
    cursor: pointer;
@@ -913,7 +1012,61 @@ header ul.active{
     left: 0;
   }
 
+  h1 {
+    font-size: 35px;
+    letter-spacing: 2px;
+    color: #DDE6EC;
+    font-family: 'Josefin Sans', serif;
+}
 
+  .home_top_text {
+    width: 100%;
+
+    justify-content: center;
+    align-items:  center;
+   
+   
+}
+
+.home_top_pic {
+  width: 40%;
+  transform: translate(50%, 0%);
+}
+
+#skills{
+  height: 150vh;
+}
+
+#skills > h2{
+  display: block;
+  font-size: 1.5em;
+  margin-block-start: 0px;
+  margin-block-end: 0px;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  font-weight: bold;
+}
+
+.skills {
+  height: 50%;
+  width: 100%;
+  transform: translate(0%, 100%);
+}
+
+.skillcontainer{
+  width: 100%;
+  background-color: whitesmoke;
+}
+
+#skills > .container {
+  transform: translate(0%, -5%);
+}
+
+.aboutme {
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+}
 
 
 }
