--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,10 @@ body {
 
 }
 
+.fixed {
+  position: fixed !important;
+}
+
 .container {
   width: 100%;
   height: 100%;
@@ -39,6 +43,7 @@ header {
     left: 50%;
     transform: translate(-50%, 0%);
     width: 100%;
+    height: 150px;
     padding:30px 16px;
     display: flex;
     font-size: 28px;
@@ -46,6 +51,7 @@ header {
     justify-content: space-between;
     z-index: 10;
     max-width: 1200px;
+    transition: top 0.3s; /* Transition effect when sliding down (and up) */
 }
 
 header .logo {
@@ -89,7 +95,7 @@ header ul li a:hover{
 
 
 
-.hamburger{
+#hamburger{
   display: none;
   cursor: pointer;
 }
@@ -120,7 +126,7 @@ header ul li a:hover{
     display: flex;
     flex-direction: row;
     position:relative;
-    z-index: 10;
+    z-index: 1;
 }
 
 #skills > div { 
@@ -210,10 +216,6 @@ header ul li a:hover{
     height: 500px;
 }
 
-.abtmetext{
-  
-}
-
 .skilllist{
     text-align: center;
     font-size: 25px;
@@ -247,7 +249,7 @@ header ul li a:hover{
     width: 100vw;
     overflow: hidden;
     position:relative;
-    z-index: 10;
+    z-index: 1;
 }
 
 .projectgallery {
@@ -337,6 +339,69 @@ header ul li a:hover{
   max-width: 700px;
 }
 
+
+
+
+
+
+
+.modalDialog {
+	position: fixed;
+	font-family: Arial, Helvetica, sans-serif;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	background: rgba(0,0,0,0.8);
+	z-index: 99999;
+	opacity:0;
+	-webkit-transition: opacity 400ms ease-in;
+	-moz-transition: opacity 400ms ease-in;
+	transition: opacity 400ms ease-in;
+	pointer-events: none;
+}
+
+.modalDialog:target {
+	opacity:1;
+	pointer-events: auto;
+}
+
+.modalDialog > div {
+	width: 400px;
+	position: relative;
+	margin: 10% auto;
+	padding: 5px 20px 13px 20px;
+	border-radius: 10px;
+	background: #fff;
+	background: -moz-linear-gradient(#fff, #999);
+	background: -webkit-linear-gradient(#fff, #999);
+	background: -o-linear-gradient(#fff, #999);
+}
+
+.close {
+	background: #606061;
+	color: #FFFFFF;
+	line-height: 25px;
+	position: absolute;
+	right: -12px;
+	text-align: center;
+	top: -10px;
+	width: 24px;
+	text-decoration: none;
+	font-weight: bold;
+	-webkit-border-radius: 12px;
+	-moz-border-radius: 12px;
+	border-radius: 12px;
+	-moz-box-shadow: 1px 1px 3px #000;
+	-webkit-box-shadow: 1px 1px 3px #000;
+	box-shadow: 1px 1px 3px #000;
+}
+
+.close:hover { background: #00d9ff; }
+
+
+
+
 /* Caption of Modal Image (Image Text) - Same Width as the Image */
 #caption {
   margin: auto;
@@ -360,11 +425,11 @@ header ul li a:hover{
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 80vh;
+  height: 30vh;
   width: 100vw;
   overflow: hidden;
   position:relative;
-  z-index: 20;
+  z-index: 1;
 }
 
 
@@ -472,6 +537,7 @@ body::-webkit-scrollbar-thumb {
   padding: 15px; /* Some padding */
   border-radius: 10px; /* Rounded corners */
   font-size: 18px; /* Increase font size */
+  text-decoration: none;
 }
 
 #topbutton:hover {
@@ -1038,31 +1104,252 @@ header ul {
     flex-direction: column;
     transition: 0.3s;
 }
-header li {
-    
-  }
+
 header li a {
     padding: 20px 30px;
     margin: 16px 0;
   }
 
-nav ul {
+nav ul.nav-menu {
   display: none;
 }
- .hamburger{
-   display: block;
-   cursor: pointer;
- }
 
-  .hamburger.active .bar:nth-child(2){
-    opacity: 0;
+#hamburger {
+  
+    display: block;
+    position: relative;
+    /* top: 50px;
+    left: 50px; */
+    
+    z-index: 1;
+    
+    -webkit-user-select: none;
+    user-select: none;
   }
-  .hamburger.active .bar:nth-child(1){
-    transform: translateY(8px) rotate(45deg);
-  }
-  .hamburger.active .bar:nth-child(3){
-    transform: translateY(-8px) rotate(-45deg);
-  }
+
+#hamburger a
+{
+  text-decoration: none;
+  color: #232323;
+  
+  transition: color 0.3s ease;
+}
+
+#hamburger a:hover
+{
+  color: tomato;
+}
+
+
+/* #hamburger input
+{
+  display: block;
+  width: 40px;
+  height: 32px;
+  position: absolute;
+  top: -7px;
+  left: -5px;
+  
+  cursor: pointer;
+  
+  opacity: 0;
+  z-index: 2;
+  
+  -webkit-touch-callout: none;
+} */
+
+/*
+ * Just a quick hamburger
+ */
+ /* #hamburger span
+ {
+   display: block;
+   width: 33px;
+   height: 4px;
+   margin-bottom: 5px;
+   position: relative;
+   
+   background: #fff;
+   border-radius: 3px;
+   
+   z-index: 1;
+   
+   transform-origin: 4px 0px;
+   
+   transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+               background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+               opacity 0.55s ease;
+ } */
+/*  
+ #hamburger span:first-child
+ {
+   transform-origin: 0% 0%;
+ }
+ 
+ #hamburger span:nth-last-child(2)
+ {
+   transform-origin: 0% 100%;
+ } */
+ 
+ /* 
+  * Transform all the slices of hamburger
+  * into a crossmark.
+  */
+ /* #hamburger input:checked ~ span
+ {
+   opacity: 1;
+   transform: rotate(45deg) translate(-2px, -1px);
+   background: #232323;
+ } */
+ 
+ /*
+  * But let's hide the middle one.
+  */
+ /* #hamburger input:checked ~ span:nth-last-child(3)
+ {
+   opacity: 0;
+   transform: rotate(0deg) scale(0.2, 0.2);
+ } */
+ 
+ /*
+  * Ohyeah and the last one should go the other direction
+  */
+ /* #hamburger input:checked ~ span:nth-last-child(2)
+ {
+   transform: rotate(-45deg) translate(0, -1px);
+ } */
+
+/* /*
+ * Make this absolute positioned
+ * at the top left of the screen
+ */
+/* #menu
+{ */
+  /* position: fixed;
+  width: 100vw;
+  height: 100vh; */
+  /* margin: -100px 0 0 -50px; */
+  /* padding: 50px;
+  padding-top: 125px;
+  
+  background: #ededed;
+  list-style-type: none;
+  -webkit-font-smoothing: antialiased; */
+  /* to stop flickering of text in safari */
+  
+  /* transform-origin: 0% 0%; */
+  /* transform: translate(100%, 0); */
+  
+  /* transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0); */
+/* } */
+
+.burger {
+  width: 90px;
+  height: 70px;
+  position: fixed;
+  z-index: 100;
+  top: 0px;
+  left: 0px;
+  cursor: pointer;
+  transition: all 0.6s ease-in-out;
+  /*end of div*/
+}
+.burger div {
+  width: 33px;
+  height: 4px;
+  background-color: #fff;
+  display: block;
+  margin: 5px 28px;
+  transition: all 0.6s ease-in-out;
+}
+.burger div:nth-child(1) {
+  margin-top: 20px;
+}
+
+/*end of menu-tab*/
+/* .burger.active { */
+  /* left: 345px; */
+  /* transition: all 600ms ease-in-out; */
+  /* background-color: rgba(255, 255, 255, 1); */
+/* } */
+.burger.active #one {
+  transform: translateY(9px) rotate(-135deg);
+  transition: all 0.6s ease-in-out;
+  background-color: #e74c3c;
+}
+.burger.active #two {
+  opacity: 0;
+  transition: 0.4s ease;
+}
+.burger.active #three {
+  transform: translateY(-9px) rotate(-45deg);
+  transition: all 0.6s ease-in-out;
+  background-color: #e74c3c;
+}
+
+#menu li
+{
+  padding: 10px 0;
+  font-size: 22px;
+}
+
+.menu-hide {
+  width: 100vw;
+  left: -100vw;
+  height: 100vh;
+  position: fixed;
+  /* z-index: 10; */
+  top: 0px;
+  transition: all 0.6s ease-in-out;
+  transition-delay: 0.5s;
+  /*end of nav*/
+}
+/* .menu-hide nav {
+
+}
+.menu-hide nav ul {
+
+} */
+.menu-hide ul li {
+  height: 70px;
+  list-style-type: none;
+  text-align: center;
+  line-height: 70px;
+  transition: all 0.5s ease;
+}
+.menu-hide ul li:hover {
+  background-color: #e74c3c;
+  transition: all 0.5s ease;
+}
+.menu-hide ul li a {
+  padding: 30px 25px;
+  text-decoration: none;
+  color: #f1f1f1;
+  font-weight: 800;
+}
+
+/*end of menu-hide*/
+.menu-hide.show {
+  left: 0px;
+  background-color: rgba(255, 255, 255, 1);
+  transition: all 0.6s ease-in-out;
+}
+
+/*
+ * And let's slide it in from the left
+ */
+/* #hamburger input:checked ~ ul
+{
+  transform: translate(calc(-100vw + 100px));
+  overflow-y: hidden;
+} */
+
+
+
+
+
+
+
 
 header ul.active{
     left: 0;
@@ -1127,7 +1414,6 @@ header ul.active{
   margin-top:30px;
   
 }
-
 
 
 .projectgallery {
