--- a/css/style.css
+++ b/css/style.css
@@ -424,12 +424,14 @@ header ul li a:hover{
   max-height: 50vh;
   overflow:hidden;
   position: relative;
-  margin: auto;
+
 }
 
 /* Hide the images by default */
 .mySlides {
+  
   display: block;
+
 }
 
 
@@ -563,7 +565,7 @@ header ul li a:hover{
   font-size: 15px;
   display: grid;
   width: 100%;
-  
+  color: #5e4969;
   justify-content: space-around;
   align-items: baseline;
   justify-items: start;
