--- a/css/style.css
+++ b/css/style.css
@@ -1402,3 +1402,33 @@ header ul.active{
 	}
 
 }
+
+@media screen and (max-width: 375px){
+#skills{
+  height: 170vh;
+  width: 100%;
+}
+
+
+.skills {
+  height: 45%;
+  width: 85%;
+  transform: translate(0%, 140%);
+  padding-bottom:30px;
+}
+
+#skills p{
+  display:block;
+  font-size: 14px;
+  max-width: 100vw;
+}
+
+.skillstext{
+  display:block;
+  font-size: 14px;
+  max-width: 100vw;
+}
+
+}
+
+
